Working but with some duplicates

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -28,17 +28,8 @@
               Knowledge Library
             </a>
             <i class="bi bi-chevron-right breadcrumb-separator"></i>
-            <span class="breadcrumb-current">Entity Graph</span>
+            <a href="#" id="entityGraphBreadcrumb" class="breadcrumb-link">Entity Graph</a>
             <span id="entityNameBreadcrumb" class="breadcrumb-entity"></span>
-            <button
-              id="backToGlobalBtn"
-              class="back-to-global-btn"
-              style="display: none"
-              title="Back to Global View"
-            >
-              <i class="bi bi-arrow-left"></i>
-              Global
-            </button>
           </div>
 
           <div class="entity-search">
