--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -28,7 +28,9 @@
               Knowledge Library
             </a>
             <i class="bi bi-chevron-right breadcrumb-separator"></i>
-            <a href="#" id="entityGraphBreadcrumb" class="breadcrumb-link">Entity Graph</a>
+            <a href="#" id="entityGraphBreadcrumb" class="breadcrumb-link"
+              >Entity Graph</a
+            >
             <span id="entityNameBreadcrumb" class="breadcrumb-entity"></span>
           </div>
 
