--- a/ts/packages/agents/browser/src/extension/views/topicGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/topicGraphView.html
@@ -29,7 +29,9 @@
               Knowledge Library
             </a>
             <i class="bi bi-chevron-right breadcrumb-separator"></i>
-            <a href="#" id="topicGraphBreadcrumb" class="breadcrumb-link">Topic Graph</a>
+            <a href="#" id="topicGraphBreadcrumb" class="breadcrumb-link"
+              >Topic Graph</a
+            >
             <span id="topicNameBreadcrumb" class="breadcrumb-entity"></span>
           </div>
         </div>
@@ -67,7 +69,6 @@
               <p>Select a topic to view details</p>
             </div>
           </div>
-
 
           <!-- Graph Statistics -->
           <div class="graph-stats">
@@ -155,7 +156,6 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <!-- Settings modal removed - using optimized defaults -->
