Add lateral relationships to topic graph (#1691)
- Add lateral relationships (co-occurrence, correlation) and enhance UI
visualization.

--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -28,17 +28,10 @@
               Knowledge Library
             </a>
             <i class="bi bi-chevron-right breadcrumb-separator"></i>
-            <span class="breadcrumb-current">Entity Graph</span>
-            <span id="entityNameBreadcrumb" class="breadcrumb-entity"></span>
-            <button
-              id="backToGlobalBtn"
-              class="back-to-global-btn"
-              style="display: none"
-              title="Back to Global View"
+            <a href="#" id="entityGraphBreadcrumb" class="breadcrumb-link"
+              >Entity Graph</a
             >
-              <i class="bi bi-arrow-left"></i>
-              Global
-            </button>
+            <span id="entityNameBreadcrumb" class="breadcrumb-entity"></span>
           </div>
 
           <div class="entity-search">
