Add multi-instance rendering for topic graph

--- a/ts/packages/agents/browser/src/extension/views/topicGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/topicGraphView.html
@@ -118,41 +118,59 @@
 
           <!-- Graph Controls -->
           <div class="graph-controls">
-            <button
-              id="fitButton"
-              class="btn btn-outline-primary btn-sm"
-              title="Fit to view"
-            >
-              <i class="bi bi-arrows-fullscreen"></i>
-            </button>
-            <button
-              id="centerButton"
-              class="btn btn-outline-primary btn-sm"
-              title="Center graph"
-            >
-              <i class="bi bi-bullseye"></i>
-            </button>
-            <button
-              id="expandAllButton"
-              class="btn btn-outline-secondary btn-sm"
-              title="Expand all"
-            >
-              <i class="bi bi-plus-square"></i>
-            </button>
-            <button
-              id="collapseAllButton"
-              class="btn btn-outline-secondary btn-sm"
-              title="Collapse all"
-            >
-              <i class="bi bi-dash-square"></i>
-            </button>
-            <button
-              id="exportButton"
-              class="btn btn-outline-info btn-sm"
-              title="Export as image"
-            >
-              <i class="bi bi-download"></i>
-            </button>
+            <div class="view-mode-controls">
+              <button
+                id="globalViewButton"
+                class="btn btn-outline-primary btn-sm"
+                title="Global importance view (top 500)"
+              >
+                <i class="bi bi-globe"></i>
+              </button>
+              <button
+                id="expandedViewButton"
+                class="btn btn-outline-primary btn-sm"
+                title="Full hierarchical view"
+              >
+                <i class="bi bi-diagram-3"></i>
+              </button>
+            </div>
+            <div class="graph-action-controls">
+              <button
+                id="fitButton"
+                class="btn btn-outline-primary btn-sm"
+                title="Fit to view"
+              >
+                <i class="bi bi-arrows-fullscreen"></i>
+              </button>
+              <button
+                id="centerButton"
+                class="btn btn-outline-primary btn-sm"
+                title="Center graph"
+              >
+                <i class="bi bi-bullseye"></i>
+              </button>
+              <button
+                id="expandAllButton"
+                class="btn btn-outline-secondary btn-sm"
+                title="Expand all"
+              >
+                <i class="bi bi-plus-square"></i>
+              </button>
+              <button
+                id="collapseAllButton"
+                class="btn btn-outline-secondary btn-sm"
+                title="Collapse all"
+              >
+                <i class="bi bi-dash-square"></i>
+              </button>
+              <button
+                id="exportButton"
+                class="btn btn-outline-info btn-sm"
+                title="Export as image"
+              >
+                <i class="bi bi-download"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
